@@ -1,10 +1,10 @@
-$Id: README 56819 2020-10-31 04:55:57Z kakuto $
+$Id: README 57291 2021-01-02 16:31:31Z karl $
 Public domain.  Originally written 2005 by Karl Berry.
 
 Extra utilities we (optionally) compile for TeX Live.
 See comments in ../texk/README.
 
-asymptote 2.65 - checked 26mar20
+asymptote 2.68 - checked 2jan21
   update to TL from CTAN, to include prebuilt doc.
   see http://tug.org/texlive/build.html#asymptote
   and tlpkg/bin/tl-update-asy
